<resources>
    <string name="app_name">Library</string>
    <string name="cancel">取消</string>
    <string name="toDo">TODO</string>
    <string name="ensure">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
    <string name="enterSearchKeyword">输入搜索关键字</string>
    <string name="clearSearchHistory">清除搜索历史</string>
    <string name="noHistory">暂无历史记录</string>
    <string name="loggingIn">LOGGING IN</string>
    <string name="success">SUCCESS</string>
    <string name="reset">重置</string>
    <string name="recordDefaultTime">00:00</string>
    <string name="voiceRecord">录音_</string>
    <string name="record">录制</string>
    <string name="play">播放</string>
    <string name="noVoiceThisMoment">暂无录音</string>
    <string name="netWorkHintContent">建议选择混合定位模式</string>
    <string name="locationHintContent">前往定位服务选择</string>
    <string name="tryFirst">先试试</string>
    <string name="gpsHintContent">前往定位服务开启GPS\n建议选择混合定位模式</string>
    <string name="goToSet">去设置</string>
    <string name="know">知道了</string>
    <string name="expanded">已展开</string>
    <string name="collapsed">已收起</string>
    <string name="serverExceptionAndTryAgainLater">服务器异常，稍后重试</string>
    <string name="loadFailAndTryAgainLater">加载失败，稍后重试</string>
    <string name="networkAnomaly">网络异常</string>
    <string name="checkSetting">检查设置</string>
    <string name="retry">重试</string>
    <string name="noData">暂无数据</string>
    <string name="search">Search</string>
    <string name="connecting">连接中…</string>
    <string name="connectionSuccess">连接成功</string>
    <string name="connectionError">连接失败</string>
    <!--format-->
    <string name="earlyLateDiffer" formatted="true">%1$s秒</string>
</resources>
