<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/statusRetryIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/toDo"
        app:srcCompat="@drawable/ic_status_no_network" />

    <TextView
        android:id="@+id/statusRetryTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_12"
        android:text="@string/networkAnomaly"
        android:textColor="@color/fontHint"
        android:textSize="@dimen/sp_10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/statusRetryMb"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:text="@string/checkSetting"
        android:textSize="@dimen/sp_10"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/px1" />
</LinearLayout>