<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_290"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_solid_c8"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_12"
    android:paddingBottom="@dimen/dp_12">

    <ImageView
        android:id="@+id/customImage"
        android:layout_width="@dimen/dp_53"
        android:layout_height="@dimen/dp_53"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/errorFrame"
        android:layout_width="@dimen/dp_53"
        android:layout_height="@dimen/dp_53"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/error_circle" />

        <ImageView
            android:id="@+id/errorX"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/error_center" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/successFrame"
        android:layout_width="@dimen/dp_53"
        android:layout_height="@dimen/dp_53"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_sign" />

        <View
            android:id="@+id/maskRight"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="end"
            android:layout_marginTop="-13dp"
            android:background="@android:color/white" />

        <View
            android:id="@+id/maskLeft"
            android:layout_width="@dimen/dp_21"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="start"
            android:layout_marginStart="-3dp"
            android:background="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_circle" />

        <com.zsp.library.dialog.sweetalertdialog.SuccessTickView
            android:id="@+id/successTick"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/warningFrame"
        android:layout_width="@dimen/dp_53"
        android:layout_height="@dimen/dp_53"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/warning_circle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/warning_sigh" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progressDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.zsp.library.progressbar.ProgressWheel
            android:id="@+id/progressWheel"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:textColor="@color/fontHint"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/contentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:textAlignment="center"
        android:textColor="@color/fontHint"
        android:textSize="@dimen/sp_13"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_24"
        android:paddingRight="@dimen/dp_24">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_36"
            android:backgroundTint="@color/graySelect"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_13"
            android:visibility="gone"
            tools:targetApi="lollipop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensure"
            android:textSize="@dimen/sp_13" />
    </LinearLayout>
</LinearLayout>